tests/ui/pattern/or-pattern-binding-mismatch.stderr
error[E0408]: variable `i` is not bound in all patterns
  --> $DIR/or-pattern-binding-mismatch.rs:6:7
   |
LL |       Foo::Alpha | Foo::Beta(i) => {}
   |       ^^^^^^^^^^             - variable not in all patterns
   |       |
   |       pattern doesn't bind `i`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0408`.
